syntax = "proto3";
package aggregates.store;

import "google/protobuf/timestamp.proto";

message Storefront {
    int64 id = 1;
    string uuid = 2;
    string user_uuid = 3;
    int32 total_item = 4;
    double rating = 5;
    google.protobuf.Timestamp created_at = 6;
    double total_raw_rating = 7;
}